corrected a bug with overflow nor working properly

--- a/scss/common/_base.scss
+++ b/scss/common/_base.scss
@@ -1,7 +1,10 @@
+html {
+    overflow-x: hidden;
+}
+
 html, body {
     font-family: $font-family;
     font-size: $default-font-size;
-    overflow-x: hidden;
 
     @include mobile {
         font-size: $default-font-size * 1.5;
